--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "git://github.com/ageitgey/node-unfluff"
   },
   "bugs": "https://github.com/ageitgey/node-unfluff/issues",
-  "main": "src/unfluff.js",
+  "main": "lib/unfluff.js",
   "directories": {
     "bin": "bin",
     "lib": "lib",
